# keyboard-mapper

./: Cargo.toml  README.md  maplist.json  note.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: rust.yml
rdev/src/: lib.rs  rdev.rs
rdev/src/linux/: grab.rs  mod.rs
rdev/src/windows/: grab.rs  mod.rs
src/: App.css  App.tsx  ButtonShortcut.tsx  MapperShortcut.tsx  actions.rs  errors.rs  main.rs  main.tsx  records.rs  styles.css
src-tauri/: Cargo.toml  maplist.json  tauri.conf.json
src-tauri/src/: handler.rs  main.rs  records.rs
src/loader/: model.loader.ts  store.loader.ts
src/store/: db.model.ts  hook.store.ts
src/styles/: components.scss
src/utils/: keyboard.ts
