[package]
name = "keyboard-mapper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23.0", features = ["sync"] }
lazy_static = "1.4.0"
# rdev = { git = "https://github.com/Narsil/rdev/", features= ["unstable_grab", "serialize"] }
rdev = { path= "../rdev/", features= ["unstable_grab", "serialize"] }
serde_cbor = "0.11.1"
serde_json = "1.0.96"
mpsc = "0.2.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
